result/0619-114357/stderr.log
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c: In function ‘color_red’:
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c:131:5: warning: implicit declaration of function ‘free’ [-Wimplicit-function-declaration]
  131 |     free(datasrc);
      |     ^~~~
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c:6:1: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
    5 | #include "utils.h"
  +++ |+#include <stdlib.h>
    6 | 
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c:131:5: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
  131 |     free(datasrc);
      |     ^~~~
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c:131:5: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c: At top level:
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c:148:6: error: redefinition of ‘helloWorld’
  148 | void helloWorld() {
      |      ^~~~~~~~~~
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c:15:6: note: previous definition of ‘helloWorld’ with type ‘void()’
   15 | void helloWorld() {
      |      ^~~~~~~~~~
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c:151:6: error: redefinition of ‘dimension’
  151 | void dimension (char *source_path){
      |      ^~~~~~~~~
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c:18:6: note: previous definition of ‘dimension’ with type ‘void(char *)’
   18 | void dimension (char *source_path){
      |      ^~~~~~~~~
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c:167:6: error: redefinition of ‘first_pixel’
  167 | void first_pixel (char *source_path){
      |      ^~~~~~~~~~~
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c:34:6: note: previous definition of ‘first_pixel’ with type ‘void(char *)’
   34 | void first_pixel (char *source_path){
      |      ^~~~~~~~~~~
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c:182:6: error: redefinition of ‘tenth_pixel’
  182 | void tenth_pixel (char *source_path){
      |      ^~~~~~~~~~~
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c:49:6: note: previous definition of ‘tenth_pixel’ with type ‘void(char *)’
   49 | void tenth_pixel (char *source_path){
      |      ^~~~~~~~~~~
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c:202:6: error: redefinition of ‘second_line’
  202 | void second_line (char *source_path){
      |      ^~~~~~~~~~~
/home/runner/work/pgi-2025-the_purple_incantations/pgi-2025-the_purple_incantations/src/features.c:69:6: note: previous definition of ‘second_line’ with type ‘void(char *)’
   69 | void second_line (char *source_path){
      |      ^~~~~~~~~~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:93: CMakeFiles/freud.dir/src/features.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2